new object exporting the necesary interface to edit samples, i.e.
Sun Mar 10 10:08:32 2002  Tim Janik  <timj@gtk.org>

        * bseeditablesample.[hc], bseeditablesample.proc: new object
        exporting the necesary interface to edit samples, i.e.
        GslWaveChunks. (or at least, it'll soon gain interface additions
        towards this end).

        * bseitem.[hc]: export bse_item_use() for non-item procedures.

        * bseplugin.[hc]: fix type registration order, so newly introduced
        procedures can use newly introduced objects.

        * bseserver.proc: supply a procuder to check for loader matches.

        * bsewave.proc: added procedure to retrive a BseEditableSample.

        * bswcommon.[hc]: made BseIcon into a BswIcon structure, so this
        can be shared and exported through the wrapper code.
        introduced BswValueBlock, which is basically a ref-counted array
        of floats.

        * gsldatacache.[hc]: support checking for presence of nodes without
        affecting the number of queued nodes (schrooedingers katze ;)
        fix dhandle naming.

        * fix BseIcon vs. BswIcon.

svn path=/trunk/; revision=384

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -50,6 +50,7 @@ bse_public_h_sources = @STRIP_BEGIN@ \
 	bsecontainer.h \
 	bsedatapocket.h \
 	bsedefs.h \
+	bseeditablesample.h \
 	bseeffect.h \
 	bseeffectbalance.h \
 	bseeffectfinetune.h \
@@ -121,6 +122,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 	bseconstant.c \
 	bsecontainer.c \
 	bsedatapocket.c \
+	bseeditablesample.c \
 	bseeffect.c \
 	bseeffectbalance.c \
 	bseeffectfinetune.c \
@@ -180,6 +182,7 @@ bse_c_sources = @STRIP_BEGIN@ \
 bse_proc_sources = @STRIP_BEGIN@ \
 	bsecontainer.proc \
 	bsedatapocket.proc \
+	bseeditablesample.proc \
 	bseenums.proc \
 	bsehelloworld.proc \
 	bseobject.proc \
@@ -195,6 +198,7 @@ bse_proc_gen_sources = @STRIP_BEGIN@ \
 	bsecontainer.gen-proc.c \
 	bsedatapocket.gen-proc.c \
 	bseenums.gen-proc.c \
+	bseeditablesample.gen-proc.c \
 	bsehelloworld.gen-proc.c \
 	bseobject.gen-proc.c \
 	bseproject.gen-proc.c \
