added BST_STOCK_* defines for stock icons and actions. added new icons.
Wed Mar 13 18:19:44 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstutils.[hc]: added BST_STOCK_* defines for stock icons and
        actions. added new icons. added convenience functions to create GtkImages
        from BswIcon and stock icons. added BST_SIZE_* icon sizes and enforced
        their use in the API. cleaned up unused utility functions. got rid of
        GnomeForest based functions. added gdk_pixbuf_create_bitmap_data(), this
        should really be in Gdk.

        * beast-gtk/bstwaveeditor.[hc]: cleaned up cruft.

        * beast-gtk/bstwaveview.c: use new icons, fix sample editor title handling.

        * beast-gtk/icons/: added new icons. autogenerate C sources with
        gdk-pixbuf-csource. removed old/uneeded files.

        * beast-gtk/bstknob.c: retrive pixbuf via stock.

        * beast-gtk/bstmenus.[hc]: rewrote item factory handling for saner API.

        * beast-gtk/bstpatterndialog.[hc]: cleaned up cruft, use new menu API.

        * beast-gtk/bstqsampler.c: slight fix to pcm position indicator.

        * beast-gtk/bstsampleeditor.[hc]: cleaned up cruft.

        * beast-gtk/bstradiotools.[hc]: support stock icons now.

        * beast-gtk/bstsnetrouter.c:
        * beast-gtk/bstprocedure.c:
        * beast-gtk/bstpreferences.c:
        * beast-gtk/bstplaylist.c:
        * beast-gtk/bstpatternview.c:
        * beast-gtk/bstmenus.[hc]:
        * beast-gtk/bstitemview.[hc]:
        * beast-gtk/bstfiledialog.c: fixup forest/icon/image handling and stock
        actions.

        * beast-gtk/bstdialog.[hc]: provide ability to sync the title with
        a BswProxy object. fixup stock actions and icon handling.

        * beast-gtk/bstpatterneditor.c: quick hack to sync BstDialog title of
        parent window.

        * beast-gtk/bstcanvassource.c: fix icon handling.

        * beast-gtk/bstapp.c: fix menus, title setting and revert preferences
        whe

--- a/PKG_config.h.in
+++ b/PKG_config.h.in
@@ -24,7 +24,16 @@
 #undef  BSE_PCM_DEVICE_CONF_ALSA
 #undef  BSE_PCM_DEVICE_CONF_OSS
 #undef  BSE_MIDI_DEVICE_CONF_OSS
-#undef BST_HAVE_BIRNET
 
 /* Define if you have the <dlfcn.h> header file.  */
 #undef HAVE_DLFCN_H
+
+/* Size of pth_mutex_t */
+#undef GLIB_SIZEOF_PTH_MUTEX_T
+
+/* Size of pth_cond_t */
+#undef GLIB_SIZEOF_PTH_COND_T
+
+/* Size of std_intmax_t */
+#undef GLIB_SIZEOF_STD_INTMAX_T
+
