ported DavOrgan to the engine, so we have our organ back.
Mon Apr  8 22:19:42 2002  Tim Janik  <timj@gtk.org>

        * davorgan.[hc]: ported DavOrgan to the engine, so we have our
        organ back.

svn path=/trunk/; revision=404

--- a/plugins/Makefile.plugins
+++ b/plugins/Makefile.plugins
@@ -101,6 +101,14 @@ bsewaveosc_la_LIBADD  = $(plugin_libs)
 EXTRA_HEADERS         += bsewaveosc.h
 
 ##
+## Plugin davorgan
+##
+davorgan_la_SOURCES = davorgan.c
+davorgan_la_LDFLAGS = -module -avoid-version
+davorgan_la_LIBADD  = $(plugin_libs)
+EXTRA_HEADERS         += davorgan.h
+
+##
 ## Plugin davxtalstrings
 ##
 davxtalstrings_la_SOURCES = davxtalstrings.c
@@ -129,6 +137,7 @@ plugin_LTLIBRARIES += \
 	bsesequencer.la \
 	bsesnooper.la \
 	bsewaveosc.la \
+	davorgan.la \
 	davxtalstrings.la \
 	fldbsepattern.la
 
