implemented BseFreeVerb module, a wrapper around the public domain
Tue Apr  9 03:03:53 2002  Tim Janik  <timj@gtk.org>

        * implemented BseFreeVerb module, a wrapper around the public domain
        FreeVerb code by Jeremy "Jezar" Wakefield.

        * freeverb/comb.hpp, comb.cpp:
        * freeverb/denormals.h, tuning.h:
        * freeverb/revmodel.hpp, revmodel.cpp:
        * freeverb/allpass.hpp, freeverb/allpass.cpp:
        Freeverb - SOURCE CODE in the public domain, written by Jezar
        at Dreampoint - http://www.dreampoint.co.uk.

        * freeverb/bsefreeverb.[hc]:
        * freeverb/bsefreeverbcpp.h freeverb/bsefreeverbcpp.cpp:
        BseFreeVerb module implementation and C++ wrapper code.

svn path=/trunk/; revision=406

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -3,9 +3,9 @@
 #
 ## Makefile.am for BSE Plugins
 
-SUBDIRS = icons
+SUBDIRS = icons . freeverb
 
-CFLAGS   += -funroll-loops $(EXTRA_CFLAGS)
+CFLAGS   += $(EXTRA_CFLAGS)
 INCLUDES += -I$(top_srcdir) $(BSE_CFLAGS) -DG_LOG_DOMAIN=BSE_PLUGIN_NAME
 INCLUDES += -DBSE_PLUGIN_FALLBACK="\"$(strip $(basename $(<F)))\""
 GLIB_MKENUMS = glib-mkenums
