--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -3,6 +3,7 @@ icon_list += ball.c
 icon_list += const.c
 icon_list += inoutport.c
 icon_list += inport.c
+icon_list += instrument.c
 icon_list += keyboard.c
 icon_list += mic.c
 icon_list += midi-in.c
@@ -11,12 +12,14 @@ icon_list += midiictrl.c
 icon_list += osc.c
 icon_list += outport.c
 icon_list += snet.c
+icon_list += snooper.c
 icon_list += song.c
 icon_list += speaker.c
 icon_list += ball.xcf
 icon_list += const.xcf
 icon_list += inoutport.xcf
 icon_list += inport.xcf
+icon_list += instrument.xcf
 icon_list += keyboard.xcf
 icon_list += mic.xcf
 icon_list += midi.xcf
@@ -24,6 +27,7 @@ icon_list += osc.xcf
 icon_list += outport.xcf
 icon_list += sheet.xcf
 icon_list += snet.xcf
+icon_list += snooper.xcf
 icon_list += song.xcf
 icon_list += speaker.xcf
 ## Generated data ends here
