moved this here from ../plugins/ because it introduces procedures and
Sun May  5 20:31:57 2002  Tim Janik  <timj@gtk.org>

        * bsewaveosc.[hcp]*: moved this here from ../plugins/ because
        it introduces procedures and otehr core components rely on it.

Sun May  5 08:07:39 2002  Tim Janik  <timj@gtk.org>

        * bsemidievent.[hc]: provide initialization values other than 0
        for pitch_bend, voume and balance on all MIDI channels.
        allocate the channel controls with the decoder.

Sun May  5 06:18:17 2002  Tim Janik  <timj@gtk.org>

        * bseamplifier.[hc], bseamplifier-aux.c: new amplifier module, BSE's
        VCA equivalent.

        * gslincluder.c: add facility to reject certain cases with GSL_INCLUDER_REJECT().

        * gslsignal.[hc]: add approximation functions for atan1(), and all
        four quadrants of a circle.

svn path=/trunk/; revision=426

--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -1,4 +1,5 @@
 ## Generated data (by make Makefile.icons)
+icon_list += ampctrl.c
 icon_list += ball.c
 icon_list += const.c
 icon_list += inoutport.c
@@ -15,6 +16,8 @@ icon_list += snet.c
 icon_list += snooper.c
 icon_list += song.c
 icon_list += speaker.c
+icon_list += waveosc.c
+icon_list += ampctrl.xcf
 icon_list += ball.xcf
 icon_list += const.xcf
 icon_list += inoutport.xcf
@@ -30,4 +33,5 @@ icon_list += snet.xcf
 icon_list += snooper.xcf
 icon_list += song.xcf
 icon_list += speaker.xcf
+icon_list += waveosc.xcf
 ## Generated data ends here
