don't invoke mkapi with -p as procedure wrapper generation doesn't work
Sun May  5 20:57:28 2002  Tim Janik  <timj@gtk.org>

        * bsw/Makefile.am ($(srcdir)/bswgenapi.c): don't invoke
        mkapi with -p as procedure wrapper generation doesn't work
        correctly for plugins on some platforms.

Sun May  5 05:22:37 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetrouter.c (bst_router_set_tool): clear the status line
        when the router tool is reset by the user.

svn path=/trunk/; revision=427

--- a/bsw/Makefile.am
+++ b/bsw/Makefile.am
@@ -86,12 +86,12 @@ bswgenapi.h: @MISSING_PERL5@		# never add deps here
 	test -f "$(srcdir)/$@" || touch $(srcdir)/$@
 # normal autogeneration rules
 $(srcdir)/stamp-bswgenapi.h: @MISSING_PERL5@ mkapi
-	$(top_builddir)/bsw/mkapi -p --header >xgen-sbpah \
+	$(top_builddir)/bsw/mkapi --header >xgen-sbpah \
 	&& (cmp -s xgen-sbpah $(srcdir)/bswgenapi.h || cp xgen-sbpah $(srcdir)/bswgenapi.h) \
 	&& rm -f xgen-sbpah \
 	&& echo timestamp > $@
 $(srcdir)/bswgenapi.c: @MISSING_PERL5@ bswgenapi.h mkapi
-	$(top_builddir)/bsw/mkapi -p --body >xgen-sbpac \
+	$(top_builddir)/bsw/mkapi --body >xgen-sbpac \
 	&& cp xgen-sbpac $(srcdir)/bswgenapi.c \
 	&& rm -f xgen-sbpac
 
