some cleanups, provide sane trigger facility via input signal and
Tue May 14 02:56:23 2002  Tim Janik  <timj@gtk.org>

        * davxtalstrings.c: some cleanups, provide sane trigger facility
        via input signal and frequency input. finally provide an icon for
        this plugin.

svn path=/trunk/; revision=432

--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -17,6 +17,7 @@ icon_list += reverb.c
 icon_list += sequencer.c
 icon_list += sine.c
 icon_list += speaker.c
+icon_list += strings.c
 icon_list += sub.c
 icon_list += sum.c
 icon_list += adsr.xcf
@@ -36,6 +37,7 @@ icon_list += prod.xcf
 icon_list += sequencer.xcf
 icon_list += sine.xcf
 icon_list += speaker.xcf
+icon_list += strings.xcf
 icon_list += sub.xcf
 icon_list += sum.xcf
 icon_list += test.xcf
