fix the biquad filter icon.
Mon May 13 23:27:47 2002  Tim Janik  <timj@gtk.org>

        * icons/biquad.c:
        * bsebiquadfilter.c: fix the biquad filter icon.

Mon May 13 23:06:49 2002  Tim Janik  <timj@gtk.org>

        * gslmakefile.inc: added $(PERL) invocation fix from stefan.

svn path=/trunk/; revision=433

--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -1,6 +1,7 @@
 ## Generated data (by make Makefile.icons)
 icon_list += ampctrl.c
 icon_list += ball.c
+icon_list += biquad.c
 icon_list += const.c
 icon_list += disconnect.c
 icon_list += inoutport.c
