get rid of this, it's a misnamed and badly parameterized module.
Tue May 14 21:05:49 2002  Tim Janik  <timj@gtk.org>

        * bsecompressor.[hc]: get rid of this, it's a misnamed and badly
        parameterized module.

        * bseatandistort.[hc]: new module, offering the atan distortion
        that could be achived with bsecompressor. this offers a saner linear
        parameterization range and is a lot faster by using an equivalent
        approximation of GSL.

svn path=/trunk/; revision=437

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -29,7 +29,7 @@ UNPORTED = @STRIP_BEGIN@	\
 @STRIP_END@
 PLUGIN_CFILES = @STRIP_BEGIN@	\
 	bseadder.[hc]		\
-	bsecompressor.[hc]	\
+	bseatandistort.[hc]	\
 	bsegenosc.[hc]		\
 	bseiirfilter.[hc]	\
 	bsemixer.[hc]		\
